<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- About -->
    <string name="app_name">TopoIndex</string>
    <string name="app_version"><![CDATA[<b>Version:</b>]]> <xliff:g id="versionString">%s</xliff:g></string>
    <string name="app_shortdesc">Map collection manager.</string>
    <string name="app_url"><xliff:g id="url"><![CDATA[
        <a href="https://forrestguice.github.io/TopoIndex/">forrestguice.github.io/TopoIndex</a>
    ]]></xliff:g></string>
    <string name="app_support_url"><![CDATA[
        <b>Support:</b> visit the
        <a href="https://github.com/forrestguice/TopoIndex/issues">issue tracker</a> to submit a request.
    ]]></string>
    <string name="app_legal1"><![CDATA[
        <b>Source Code:</b><br />
        Copyright &#169 2019 Forrest Guice <br />
        Source code available under GPLv3.
    ]]></string>
    <string name="app_legal2" />
    <string name="app_legal3" />

    <string name="privacy_policy"><![CDATA[<b>Privacy:</b><br/>TopoIndex does not collect, store, or transmit personal user data. It contains <b>no advertising</b>, <b>no analytics</b>, <b>no trackers</b>, and <b>no unnecessary permissions</b>. <br/><br/><xliff:g id="permissionsExplained">%1$s</xliff:g>]]></string>
    <string name="privacy_url"><xliff:g id="url"><![CDATA[
        <a href="https://github.com/forrestguice/TopoIndex/wiki/Privacy">github.com/forrestguice/TopoIndex/wiki/Privacy</a>
    ]]></xliff:g></string>
    <string name="privacy_permission_location"><![CDATA[TopoIndex uses the <b>location</b> permission to determine your current longitude and latitude.]]></string>
    <string name="privacy_permission_storage"><![CDATA[TopoIndex uses <b>external storage</b> permissions to scan your map collection.]]></string>
    <string name="permissions_dialog_title">Permissions</string>

    <!-- Help -->
    <string name="help_general"><![CDATA[

      <b>US Topo</b><br />
      <a href="http://nationalmap.gov/ustopo">http://nationalmap.gov/ustopo</a><br />
      Current topographic quadrangle maps. These are maps produced in 2010 or later. They are created and published as digital products. The format is layered PDF with geospatial extensions.
      <br /><br />

      <b>Historical Topographic Map Collection (HTMC)</b><br />
      <a href="http://nationalmap.gov/historical">http://nationalmap.gov/historical</a><br />
      Scanned images of legacy topographic quadrangle maps. These maps were originally published on paper in the period 1884-2006. The HTMC images are in PDF format with geospatial extensions.

    ]]></string>
    <string name="help_location">TopoIndex uses the passive provider to obtain your location.\n\nUse a GPS app to request location updates (and TopoIndex will also receive those updates).</string>

    <!-- List -->
    <string name="list_empty_maps">No Maps</string>
    <string name="list_empty_maps_nearby">No maps found near %1$s.</string>
    <string name="list_empty_index">No Maps</string>

    <string name="list_empty_message_clear"><![CDATA[<a href="">Clear search filters</a>]]></string>
    <string name="list_empty_message_scan"><![CDATA[<a href="">Scan for files</a>]]></string>
    <string name="list_empty_message_update"><![CDATA[<a href="">Update the database</a>]]></string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">@string/app_shortdesc</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_item_nearest9">@string/action_nearby</string>
    <string name="nav_item_locallist">My Collection</string>
    <string name="nav_group_local">Local Maps</string>
    <string name="nav_group_usgs">USGS Index</string>
    <string name="nav_item_usgs_htmc">Historical Topo</string>
    <string name="nav_item_usgs_ustopo">US Topo</string>

    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_scan">Scan Files</string>
    <string name="action_view">View</string>
    <string name="action_download">Download</string>
    <string name="action_nearby">Nearby</string>
    <string name="action_filters">Filters</string>
    <string name="action_clear_filter">Clear Filter</string>
    <string name="action_settings">Settings</string>
    <string name="action_location">Location</string>
    <string name="action_location_auto">Current Location</string>

    <!-- Filters -->
    <string name="filter_label_name">Map Name</string>
    <string name="filter_label_state">States</string>
    <string name="filter_label_scale">Map Scale</string>
    <string name="filter_label_none">No Filter</string>

    <string-array name="mapscale_display">
        <item>Any</item>
        <item>250K</item>
        <item>125K</item>
        <item>100K</item>
        <item>63K</item>
        <item>48K</item>
        <item>24K</item>
    </string-array>

    <!-- General settings -->
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_collectionPath0">Map Directory</string>

    <!-- Database settings -->
    <string name="pref_header_database">Index</string>
    <string name="pref_title_database_update">Update Index</string>
    <string name="pref_title_database_index">Rebuild Index</string>
    <string name="pref_title_database_date">Index Version</string>
    <string name="pref_title_database_lastupdate">Last Update</string>

    <string name="database_update_confirm_title">Update Index</string>
    <string name="database_update_confirm_message">Are you sure you want update?\n\nUpdating takes several minutes (per state).\n\nWhen completed the app\'s database may consume several hundred MB.</string>

    <string name="action_update_from_assets">Update from assets</string>
    <string name="action_update_from_file">Update from file</string>

    <string name="database_update_success">Index updated (%s items)</string>
    <string name="database_update_failed">Failed to update index</string>
    <string name="database_update_progress">Updating index … %s</string>

    <string name="database_scan_success">Collection scanned (%s items)</string>
    <string name="database_scan_failed">Failed to scan collection</string>
    <string name="database_scan_progress">Scanning files …</string>

    <string name="select_at_least_one">Select at least one entry.</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Clear</string>

    <string name="none">none</string>
    <string name="never">never</string>

    <!-- Location -->
    <string name="location_dialog_title">@string/action_location</string>

    <string name="hint_latitude">0</string>
    <string name="hint_longitude">0</string>

    <string name="label_auto">Auto</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>

    <string name="location_format">%1$s, %2$s</string>


</resources>
