<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_location_auto"
        android:orderInCategory="0"
        android:title="@string/action_location_auto"
        android:icon="?attr/icPosition"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_location"
        android:orderInCategory="50"
        android:title="@string/action_location"
        android:icon="?attr/icLocation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filters"
        android:orderInCategory="75"
        android:title="@string/action_filters"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="150"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
