<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nearest9"
            android:icon="@drawable/ic_menu_location_light"
            android:title="@string/nav_item_nearest9" />

        <item
            android:id="@+id/nav_local_list"
            android:icon="@drawable/ic_menu_maps_light"
            android:title="@string/nav_item_locallist" />
    </group>

    <item android:title="@string/nav_group_usgs" android:checkableBehavior="single">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_index_usgs_htmc"
                    android:icon="@drawable/ic_menu_maps_light"
                    android:title="@string/nav_item_usgs_htmc" />
                <item
                    android:id="@+id/nav_index_usgs_ustopo"
                    android:icon="@drawable/ic_menu_maps_light"
                    android:title="@string/nav_item_usgs_ustopo" />
            </group>
        </menu>
    </item>

</menu>
